--- a/src/index.html
+++ b/src/index.html
@@ -5,20 +5,25 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
+    <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
-
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
+    <section class="main">
+      <div class="container">
+        <form class="form">
+          <input type="text" name="search" id="search-input" placeholder="Search imaages...">
+          <button type="submit" id="search-btn">Search</button>
+        </form>
+    
+        <span class="loader"></span>
+        <ul class="gallery"></ul>
+        <div class="btn-container">
+          <button class="load-more">Load more</button>
+        </div>
+      </div>
     </section>
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
     <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/render-functions.js"></script>
   </body>
 </html>
