--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,10 @@
         <div class="btn-container">
           <button class="load-more">Load more</button>
         </div>
+        <ul class="languages">
+          <li class="item"><a href="#" data-lang="en" class="link">English</a></li>
+          <li class="item"><a href="#" data-lang="ua" class="link">Українська</a></li>
+        </ul>
       </div>
     </section>
     <script type="module" src="./main.js"></script>
