--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
         </div>
         <span  data-translate="hello"></span>
         <ul class="languages">
-          <li class="item"><a href="/goit-js-hw-12/" data-lang="en" class="link">English</a></li>
-          <li class="item"><a href="/goit-js-hw-12/" data-lang="ua" class="link">Українська</a></li>
+          <li class="item"><a href="#" data-lang="en" class="link">English</a></li>
+          <li class="item"><a href="#" data-lang="ua" class="link">Українська</a></li>
         </ul>
       </div>
     </section>
